--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,7 @@
 name = "xpot-ch"
+main = ".open-next/worker.js"
 compatibility_date = "2024-12-27"
 compatibility_flags = ["nodejs_compat"]
 
 [assets]
 directory = ".open-next/assets"
-binding = "ASSETS"
